image distortion resolved

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -29,7 +29,7 @@
 }
 
 .columns.columns-transform-teaser > div p {
-  margin: 15px 0;
+  margin: 0;
 }
 
 .columns.columns-divider-variant > div > div > p {
@@ -45,7 +45,7 @@
   font-size: var(--h2-base);
   text-transform: uppercase;
   margin-top: 40px;
-  margin-bottom: var(--regular);
+  margin-bottom: var(--small);
   line-height: 35px;
 }
 
@@ -56,7 +56,7 @@
 
 .columns.columns-transform-teaser > div p:nth-child(3) {
   display: inline-flex;
-  margin: 21px 30px 9px 0;
+  margin: var(--large) 30px 9px 0;
 }
 
 .columns.columns-transform-teaser > div p:nth-child(4) {
@@ -304,7 +304,6 @@
 
   .bg-primary-blue-90 .columns.columns-transform-teaser .columns-img-col img {
     width: 371px;
-    height: 408px;
   }
 }
 
@@ -387,7 +386,7 @@
     position: relative;
     top: 0;
     right: 0;
-    margin-top: -160px;
+    margin-top: -100px;
     margin-bottom: 40px;
   }
 
